[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
anyhow = "1.0.66"
zstd = "0.12"
base64 = "0.13.1"
bitvec = "0.20.4"
ff = { git = "https://github.com/eqlabs/ff", branch = "var_time_eq", default-features = false, features = [
    "derive",
    "alloc",
] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["arbitrary_precision", "raw_value"] }
stark_hash = { path = "./src/stark_hash" }
pathfinder_common = { path = "./src/common" }
flate2 = "1.0.25"
pathfinder-serde = { path = "./src/serde" }
starknet-gateway-types = { path = "./src/gateway-types" }
tokio = { version = "1.23.0", features = ["process"] }
serde_with = "2.1.0"
thiserror = "1.0.37"
